<resources>
    <string name="app_name">Recipe Vault</string>
    <string name="my_recipes">My Recipes</string>
    <string name="add_recipe">Add recipe</string>
    <string name="share">Share recipe</string>
    <string name="recipe_photo">Recipe photo</string>
    <string name="edit">Edit</string>
    <string name="timeToCook">%d minutes</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="recipe">Recipe</string>
    <string name="ings">Ingredients</string>
    <string name="dots">dotted line</string>
    <string name="set_title">Introduce recipe title</string>
    <string name="set_time_to_cook">Introduce time to cook</string>
    <string name="set_description">Introduce a small description</string>
    <string name="set_step">Introduce a step</string>
    <string name="instructions">Instructions</string>
    <string name="save">Save</string>
    <string name="set_ing">Introduce an ingredient</string>
    <string name="set_quantity">Quantity</string>
    <string name="uds">Uds</string>
    <string name="grams">Grams</string>
    <string name="liters">Liters</string>
    <string name="cups">Cups</string>
    <string name="breakfast">Breakfast</string>
    <string name="meal">Meal</string>
    <string name="dinner">Dinner</string>
    <string name="choose_time">Choose type</string>
    <string name="choose_diet">Choose diet</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="regular">Regular</string>
    <string name="last_copy">Last backup</string>
    <string name="make_backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="schedule_backup">Schedule backup</string>
    <string name="schedule_descr">Your recipes will be backup in Dropbox and your device automatically</string>
    <string name="backup_timing">Make backup every</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="save_with">Save with</string>
    <string name="just_wifi">Just Wi-Fi</string>
    <string name="wifi_and_data">Wi-Fi or Data</string>
    <string name="my_account">My Account</string>
    <string name="log_in">Login to Dropbox</string>
    <string name="backup_error">There was an error with your backup, please try again later</string>
    <string name="backup_time_error">Could not find a previous backup</string>
    <string name="local">&lt;b>Local:&lt;/b> %s</string>
    <string name="cloud">&lt;b>Dropbox:&lt;/b> %s</string>
    <string name="size">&lt;b>Size:&lt;/b> %.2f MB</string>
    <string name="no_local_backup_jet">There is no local backup currently</string>
    <string name="automatic_backup">Program Automatic Backup</string>
    <string name="backup_done_ok">Backup done successfully</string>
    <string name="restore_done_ok">Backup restored successfully</string>
    <string name="sign_in_help">Sign in to make backups of your recipes in Dropbox</string>
    <string name="back">Back</string>
    <string name="required_text">Required text</string>
    <string name="search_recipe">Look for a recipe</string>
    <string name="undo">Undo</string>
    <string name="recipe_removed">Recipe removed</string>
    <string name="metrica">Metric</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity</string>
    <string name="user_confirmation">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="ing_title">Ingredient</string>
    <string name="accept_connection">Accept connection to %s</string>
    <string name="confirm_code">Confirm the code matches on both devices: %s</string>
    <string name="accept">Accept</string>
</resources>