<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_recipe"
        android:contentDescription="@string/save"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"
        app:showAsAction="always" />
</menu>